[tool.poetry]
name = "budg"
version = "0.2.0a0"
description = "a simple budget tool"
authors = ["Kyle Bouwman <kybouw@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
